Registrando cliente y prestamo a BD

--- a/Bank-app/src/index.html
+++ b/Bank-app/src/index.html
@@ -14,12 +14,12 @@
 
   <body>  
       <App>
-        <div class="loading">
-        <p>Cargando...</p>
-          <div class="progress">
-            <div class="indeterminate"></div>
+          <div class="loading_m">
+              <p>Cargando...</p>
+                <div class="progress progress_m">
+                  <div class="indeterminate"></div>
+                </div>
           </div>
-        </div>
       </App>
   </body>
 </html>
